--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -15,10 +15,10 @@ $global-transition: all .35s;
 // *****************
 // Color Variables
 // *****************
-$brand-color: #f6b141;
-$dark: #393e46;
+$brand-color: #3f3fe2ff;
+$dark: #333333;
 $gray: #bbbbbb;
-$light-gray: #e6eef0;
+$light-gray: #ede6f0;
 $white: #ffffff;
 $black: #000000;
 
@@ -50,12 +50,12 @@ $base-font-size: 16px;
 $base-font-style: normal;
 $base-font-variant: normal;
 $base-font-weight: normal;
-$base-font-family: 'Roboto', Helvetica Neue, Helvetica, Arial, sans-serif;
+$base-font-family: 'Figtree', Helvetica Neue, Helvetica, Arial, sans-serif;
 $base-line-height: 26px;
 
 // Headings
 $heading-font-weight: 700;
-$heading-font-family: 'Roboto', Helvetica Neue, Helvetica, Arial, sans-serif;
+$heading-font-family: 'Figtree', Helvetica Neue, Helvetica, Arial, sans-serif;
 
 $font-size-h1:  36px;
 $font-size-h2:  28px;
