--- a/_includes/contact-link.html
+++ b/_includes/contact-link.html
@@ -19,5 +19,13 @@
     {% if site.data.settings.pinterest %}
       <li><a href="{{ site.data.settings.pinterest }}"><i class="ion ion-logo-pinterest"></i></a></li>
     {% else %} {% endif %}
+
+    {% if site.data.settings.linkedin %}
+      <li><a href="{{ site.data.settings.linkedin }}"><i class="ion ion-logo-linkedin"></i></a></li>
+    {% else %} {% endif %}
+
+    {% if site.data.settings.behance %}
+      <li><a href="{{ site.data.settings.behance }}"><i class="ion ion-logo-behance"></i></a></li>
+    {% else %} {% endif %}
   </ul>
 </div>
